Fin dev OpenAI intégration